<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>JPassport</groupId>
    <artifactId>JPassport-parent</artifactId>
    <version>0.7.0-22</version>

    <modules>
        <module>jpassport</module>
        <module>test_jpassport</module>
    </modules>

    <name>JPassport</name>
    <packaging>pom</packaging>
    <description>A Java library for interfacing with the foreign linker API. Designed as a replacement for JNA. </description>
    <url>https://github.com/boulder-on/JPassport#readme</url>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>22</release> <!-- <release>13/14/15</release> -->
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

</project>